# HDUagent

./: .gitignore
.githooks/: generate_cn_message.py  (+1 more)
agent-test - 副本/agent-web/: .dockerignore  .env.docker  Dockerfile  main.py  pyproject.toml  requirements.txt
agent-test - 副本/agent-web/agent/: agent_loop.py  client_claude.py  playbook_router.py  task_memory.py  web_tools.py
agent-test - 副本/agent-web/knowledge/deserialize/: php_deserialize.md  python_deserialize.md
agent-test - 副本/agent-web/knowledge/file_inclusion/: lfi_rfi.md
agent-test - 副本/agent-web/knowledge/misc/: jwt.md
agent-test - 副本/agent-web/knowledge/prototype_pollution/: prototype_pollution.md
agent-test - 副本/agent-web/knowledge/rce/: rce.md
agent-test - 副本/agent-web/knowledge/reverse/: reverse_engineering.md
agent-test - 副本/agent-web/knowledge/sqli/: sql_injection.md
agent-test - 副本/agent-web/knowledge/ssrf/: ssrf.md
agent-test - 副本/agent-web/memory/: task_1773910223_89b6d504.json  task_1773912269_174061f8.json  task_1773912364_4a7788ce.json  task_1773913733_c3d1f780.json  task_1773916346_80552ca2.json  task_1774246914_ee74b622.json  task_1774246956_53f50fc8.json  task_1774248877_18a6b0b5.json  task_1774254464_44bc8edd.json
agent-test - 副本/agent-web/playbooks/: crypto_analysis.md  forensics.md  misc_stego.md  pcap_analysis.md  reverse_engineering.md  web_pentest.md
agent-test - 副本/agent-web/runs/: run-20260319-182458.jsonl  run-20260319-183226.jsonl  run-20260319-184734.jsonl  run-20260323-142154.jsonl  run-20260323-142236.jsonl  run-20260323-145437.jsonl  run-20260323-162744.jsonl
(+105 files in other folders)
